feat: login with e-mail and with google account
